src/components/ToDoTile/ToDoTile.module.css
.checkboxAndToDoTileWrapper {
	display: flex;
	margin-top: 8px;
}

.checkboxWrapper {
	display: flex;
	height: 40px;
	width: 40px;
	clip-path: circle(45% at 50% 50%);
}

.toDoWrapper {
	padding: 0.5rem;
	border-radius: 3px;
	width: 85%;
	background-color: #e6e6e6;
}

.descriptionSection {
	display: flex;
	margin-bottom: 0.5rem;
	align-items: center;
	position: relative;
	justify-content: space-between;
}

.titleText h2 {
	font-weight: 300;
}

.titleText h2,
.descriptionSection p,
.commentSection p {
	cursor: pointer;
}

.descriptionSection p {
	font-size: 0.9rem;
	width: 30ch;
}

.moreIcon {
	cursor: pointer;
	margin-right: 0.5rem;
}

.modalOverlay {
	position: fixed;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
}

.modalContainer {
	position: absolute;
	top: 75%;
	left: 52%;
	transform: translateY(10px);
	background-color: var(--white);
	padding: 10px;
	border-radius: 3px;
	max-width: 100%;
	width: 50%;
	outline: 1px solid var(--lightblue);
	z-index: 2;
}

.modalList {
	border-radius: 5px;
	min-width: 100px;
	display: flex;
	flex-direction: column;
	gap: 10px;
	list-style: none;
}

.modalItem {
	color: var(--black);
	text-decoration: none;
	cursor: pointer;
	display: flex;
	user-select: none;
}

.modalItem:hover {
	background-color: var(--lightblue);
}

.commentWrapper {
	display: flex;
	justify-content: space-between;
}

.commentSection {
	display: flex;
	text-align: center;
}

.commentSection p {
	margin-left: 0.2rem;
	font-style: italic;
}

.iconContainer {
	margin-top: 2px;
}

.badgeIcon {
	margin: 0 0.5rem 0.5rem 0;
	opacity: 0.3;
}

@media (max-width: 320px) {
	.commentSection p {
		font-size: 0.9rem;
	}
	.descriptionSection p {
		font-size: 0.8rem;
	}
}

.notApplicable {
	background-color: #eea88e;
}

.checked {
	background-color: #9db3b6;
}

